--- a/src/components/common/Carousels/CenterSlides/CenterSlideCard/CenterSlideCard.module.scss
+++ b/src/components/common/Carousels/CenterSlides/CenterSlideCard/CenterSlideCard.module.scss
@@ -1,14 +1,13 @@
 .card {
   position: relative;
-  height: 60vh;
-  max-height: 100vh;
+  height: 600px;
 }
 
 .image-card {
   width: 100%;
   height: 100%;
-  border-radius: 40px;
+  border-radius: 10px;
   object-fit: cover;
   overflow: hidden;
-  border: 3px solid #ffd859;
+  border: 2px solid var(--color-secondary);
 }
