--- a/src/components/pages/Home/Home.module.scss
+++ b/src/components/pages/Home/Home.module.scss
@@ -9,19 +9,16 @@
 
 .header {
   text-align: center;
-  color: #d8e6ea;
+  color: var(--color-text-primary);
   padding-top: 32px;
   padding-bottom: 32px;
 
   &--title {
     font-size: 2.5rem;
-    font-weight: 800;
-    background: linear-gradient(0deg, #ffd859, #bfdf6b);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    padding-bottom: 4px;
+    font-weight: 700;
+    color: var(--color-secondary);
   }
+
   &--subtitle {
     font-size: 1.2rem;
   }
