--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -1,7 +1,5 @@
 @use "sass:map";
 
-//TODO: colors not working
-
 $default-colors: (
   --color-white: #ffffff,
   --color-black: #000000,
@@ -13,7 +11,9 @@ $colors: map.merge(
     // Primary colors
     --color-primary: #101927,
     // Secondary colors
-    --color-secondary: #ffd859,
+    --color-secondary: #06c445,
+
+    --color-primary-100: #f6f7fa,
 
     // Status colors
     --color-warning: #ffb82e,
@@ -22,8 +22,7 @@ $colors: map.merge(
     --color-info: #086fdd,
 
     // Text colors
-    --color-text-primary: #222f28,
-    --color-text-secondary: #7c8982,
+    --color-text-primary: #0a1322,
 
     // Opacity colors
     // Disabled colors
