feat: finished swiper

--- a/src/styles/common/_scrollbars.scss
+++ b/src/styles/common/_scrollbars.scss
@@ -15,7 +15,7 @@
 
   ::-webkit-scrollbar-thumb {
     border-radius: 999px;
-    background: #ffd859;
+    background: var(--color-primary);
     transition:
       background-color 0.2s linear,
       width 0.2s;
