--- a/src/components/common/Carousels/CoverflowCarousel/CoverflowCarouselCard/CoverflowCarouselCard.module.scss
+++ b/src/components/common/Carousels/CoverflowCarousel/CoverflowCarouselCard/CoverflowCarouselCard.module.scss
@@ -1,6 +1,12 @@
 .card {
   position: relative;
-  height: 600px;
+  height: 450px;
+  width: 320px;
+
+  @media screen and (min-width: 640px) {
+    height: 500px;
+    width: auto;
+  }
 }
 
 .image-card {
