--- a/src/styles/includes.scss
+++ b/src/styles/includes.scss
@@ -1,2 +1,9 @@
-@import "mixins/mixins";
 @import "variables/variables";
+
+/**
+ * Include Media
+ * https://eduardoboucas.github.io/include-media/
+ */
+@import "/node_modules/~include-media/dist/_include-media";
+
+@import "mixins/mixins";
