--- a/src/components/common/Carousels/CoverflowCarousel/CoverflowCarouselCard/CoverflowCarouselCard.module.scss
+++ b/src/components/common/Carousels/CoverflowCarousel/CoverflowCarouselCard/CoverflowCarouselCard.module.scss
@@ -3,7 +3,7 @@
   height: 450px;
   width: 320px;
 
-  @media screen and (min-width: 640px) {
+  @include media(">=phone-lg") {
     height: 500px;
     width: auto;
   }
