--- a/src/styles/core/variables/_colors.scss
+++ b/src/styles/core/variables/_colors.scss
@@ -52,13 +52,23 @@ $colors: map.merge(
     --color-info: #086fdd,
 
     // Text colors
-    --color-text-primary: #3b3b3b,
+    --color-text-primary: #252525,
 
     // Opacity colors
     // Disabled colors
     --color-disabled: #dbdfdd,
 
     // Neutral colors
+    --color-neutral-100: #f8f8f8,
+    --color-neutral-200: #f0f0f0,
+    --color-neutral-300: #e0e0e0,
+    --color-neutral-400: #cfcfcf,
+    --color-neutral-500: #bfbfbf,
+    --color-neutral-600: #9f9f9f,
+    --color-neutral-700: #7f7f7f,
+    --color-neutral-800: #5f5f5f,
+    --color-neutral-900: #3f3f3f,
+
     // Add your custom colors here
   )
 );
